2003-01-24  Jesper Harder  <harder@ifa.au.dk>

	* gnus-msg.el (gnus-message-replysign)
	(gnus-message-replyencrypt): Fix typo.

2003-01-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-mime-security-show-details): Toggle showing
	details. 

2003-01-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-press-button): let* -> let.
	(gnus-mime-security-show-details): Cleaned up.
	(gnus-mime-security-press-button): Save excursion.
	(gnus-insert-mime-security-button): Clean up.

	* gnus-sum.el (gnus-summary-force-verify-and-decrypt): Doc fix.

	* gnus-async.el (gnus-async-wait-for-article): Don't use a
	timeout. 

	* nntp.el (nntp-accept-process-output): Removed timeout. 
	(nntp-read-timeout): New variable.
	(nntp-accept-process-output): Use it.

	* gnus-sum.el (gnus-data-find-list): Remove *.

2002-01-23  Kevin Greiner  <kgreiner@xpediantsolutions.com>

	* gnus-sum.el (gnus-summary-first-subject): Fixed bug that I
	introduced on 2002-01-22.
	(gnus-summary-first-unseen-or-unread-subject): Ditto.

2003-01-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-regex-headers, spam-list-of-checks) 
	(spam-regex-headers-spam, spam-regex-headers-ham): added spam/ham
	checks of incoming mail based on simple header regexp matching

2003-01-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-spam-mark): set to `$'

2002-01-22  Kevin Greiner  <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-get-undownloaded-list): Now computes
	gnus-newsgroup-unfetched, the list of articles whose headers have
	not been fetched from the server.

	* gnus-sum.el (gnus-summary-find-next): Removed undownloaded
	parameter as it never worked due to a bug.  Added check to prevent
	selection of any article in the gnus-newsgroup-unfetched list.
	(gnus-summary-find-prev): Added check to prevent selection of any
	article in the gnus-newsgroup-unfetched list.
	(gnus-summary-first-subject): Documented API. Modified